--- a/src/components/atoms/ProfileCard/ProfileCard.module.scss
+++ b/src/components/atoms/ProfileCard/ProfileCard.module.scss
@@ -53,7 +53,7 @@
 }
 
 .hashtag {
-  color: var(--color-blue-6);
+  color: var(--color-primary);
   margin: 0;
   line-height: 1.4;
   font-weight: 500;
