--- a/src/components/atoms/Avatar/Avatar.module.scss
+++ b/src/components/atoms/Avatar/Avatar.module.scss
@@ -43,28 +43,28 @@
 
 // Variant styles
 .variant-primary {
-  background-color: var(--color-button-primary);
-  color: var(--color-white);
+  background-color: var(--color-primary);
+  color: var(--color-surface);
 }
 
 .variant-secondary {
-  background-color: var(--color-button-secondary);
-  color: var(--color-button-text);
+  background-color: var(--color-surface-secondary);
+  color: var(--color-text-primary);
 }
 
 .variant-success {
   background-color: var(--color-success);
-  color: var(--color-white);
+  color: var(--color-surface);
 }
 
 .variant-warning {
   background-color: var(--color-warning);
-  color: var(--color-white);
+  color: var(--color-surface);
 }
 
 .variant-error {
   background-color: var(--color-error);
-  color: var(--color-white);
+  color: var(--color-surface);
 }
 
 .variant-muted {
