--- a/src/components/atoms/Badge/Badge.module.scss
+++ b/src/components/atoms/Badge/Badge.module.scss
@@ -140,80 +140,82 @@
 }
 
 .variant-subtle {
-  background-color: var(--color-gray-1);
-  color: var(--color-blue-8);
-  border: var(--border-width-thin) solid var(--color-gray-1);
+  background-color: var(--color-surface-secondary);
+  border: var(--border-width-thin) solid var(--color-surface-secondary);
+  color: var(--color-text-primary);
 
   &:hover:not(.disabled) {
-    background-color: var(--color-gray-2);
-    border-color: var(--color-gray-2);
+    background-color: var(--color-surface-tertiary);
+    border-color: var(--color-surface-tertiary);
   }
 
   &:active:not(.disabled) {
-    background-color: var(--color-gray-3);
-    border-color: var(--color-gray-3);
+    background-color: var(--color-surface-tertiary);
+    border-color: var(--color-surface-tertiary);
   }
 }
 
 .variant-light {
-  background-color: transparent;
-  color: var(--color-blue-8);
-  border: none;
+  background-color: var(--color-surface-secondary);
+  border: var(--border-width-thin) solid var(--color-border-secondary);
+  color: var(--color-text-primary);
 
   &:hover:not(.disabled) {
-    background-color: var(--color-blue-0);
+    background-color: var(--color-surface-tertiary);
+    border-color: var(--color-border-primary);
   }
 
   &:active:not(.disabled) {
-    background-color: var(--color-blue-1);
+    background-color: var(--color-surface-tertiary);
+    border-color: var(--color-border-primary);
   }
 }
 
 .variant-outline {
   background-color: transparent;
-  color: var(--color-blue-8);
-  border: var(--border-width-thin) solid var(--color-blue-8);
+  color: var(--color-text-primary);
+  border: 1px solid var(--color-border-secondary);
 
   &:hover:not(.disabled) {
-    background-color: var(--color-blue-0);
-    border-color: var(--color-blue-9);
+    background-color: var(--color-surface-secondary);
+    border-color: var(--color-border-primary);
   }
 
   &:active:not(.disabled) {
-    background-color: var(--color-blue-1);
-    border-color: var(--color-blue-7);
+    background-color: var(--color-surface-tertiary);
+    border-color: var(--color-border-primary);
   }
 }
 
 .variant-white {
-  background-color: var(--color-white);
-  color: var(--color-blue-8);
-  border: var(--border-width-thin) solid var(--color-gray-3);
+  background-color: var(--color-surface);
+  color: var(--color-text-primary);
+  border: var(--border-width-thin) solid var(--color-border-secondary);
 
   &:hover:not(.disabled) {
-    background-color: var(--color-gray-0);
-    border-color: var(--color-gray-4);
+    background-color: var(--color-surface-secondary);
+    border-color: var(--color-border-primary);
   }
 
   &:active:not(.disabled) {
-    background-color: var(--color-gray-1);
-    border-color: var(--color-gray-5);
+    background-color: var(--color-surface-tertiary);
+    border-color: var(--color-border-primary);
   }
 }
 
 .variant-default {
-  background-color: var(--color-white);
-  color: var(--color-gray-9);
-  border: 1px solid var(--color-gray-3);
+  background-color: var(--color-surface);
+  color: var(--color-text-primary);
+  border: 1px solid var(--color-border-secondary);
 
   &:hover:not(.disabled) {
-    background-color: var(--color-gray-0);
-    border-color: var(--color-gray-4);
+    background-color: var(--color-surface-secondary);
+    border-color: var(--color-border-primary);
   }
 
   &:active:not(.disabled) {
-    background-color: var(--color-gray-1);
-    border-color: var(--color-gray-5);
+    background-color: var(--color-surface-tertiary);
+    border-color: var(--color-border-primary);
   }
 }
 
