--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -42,96 +42,96 @@
 
   // Variant styles
   &.variant-filled {
-    background-color: var(--color-blue-8);
-    color: var(--color-white);
-    border: var(--border-width-thin) solid var(--color-blue-8);
+    background-color: var(--color-primary);
+    color: var(--color-surface);
+    border: var(--border-width-thin) solid var(--color-primary);
 
     &:hover:not(:disabled) {
-      background-color: var(--color-blue-9);
-      border-color: var(--color-blue-9);
+      background-color: var(--color-primary-7);
+      border-color: var(--color-primary-7);
     }
 
     &:active:not(:disabled) {
-      background-color: var(--color-blue-7);
-      border-color: var(--color-blue-7);
+      background-color: var(--color-primary-6);
+      border-color: var(--color-primary-6);
     }
   }
 
   &.variant-subtle {
-    background-color: var(--color-gray-1);
-    color: var(--color-blue-8);
-    border: var(--border-width-thin) solid var(--color-gray-1);
+    background-color: var(--color-surface-secondary);
+    color: var(--color-primary);
+    border: var(--border-width-thin) solid var(--color-surface-secondary);
 
     &:hover:not(:disabled) {
-      background-color: var(--color-gray-2);
-      border-color: var(--color-gray-2);
+      background-color: var(--color-surface-tertiary);
+      border-color: var(--color-surface-tertiary);
     }
 
     &:active:not(:disabled) {
-      background-color: var(--color-gray-3);
-      border-color: var(--color-gray-3);
+      background-color: var(--color-surface-tertiary);
+      border-color: var(--color-surface-tertiary);
     }
   }
 
   &.variant-light {
     background-color: transparent;
-    color: var(--color-blue-8);
+    color: var(--color-primary);
     border: none;
 
     &:hover:not(:disabled) {
-      background-color: var(--color-blue-0);
+      background-color: var(--color-surface-secondary);
     }
 
     &:active:not(:disabled) {
-      background-color: var(--color-blue-1);
+      background-color: var(--color-surface-tertiary);
     }
   }
 
   &.variant-outline {
     background-color: transparent;
-    color: var(--color-blue-8);
-    border: var(--border-width-thin) solid var(--color-blue-8);
+    color: var(--color-primary);
+    border: var(--border-width-thin) solid var(--color-primary);
 
     &:hover:not(:disabled) {
-      background-color: var(--color-blue-0);
-      border-color: var(--color-blue-9);
+      background-color: var(--color-surface-secondary);
+      border-color: var(--color-primary-7);
     }
 
     &:active:not(:disabled) {
-      background-color: var(--color-blue-1);
-      border-color: var(--color-blue-7);
+      background-color: var(--color-surface-tertiary);
+      border-color: var(--color-primary-6);
     }
   }
 
   &.variant-white {
-    background-color: var(--color-white);
-    color: var(--color-blue-8);
-    border: var(--border-width-thin) solid var(--color-gray-3);
+    background-color: var(--color-surface);
+    color: var(--color-text-primary);
+    border: var(--border-width-thin) solid var(--color-border-secondary);
 
     &:hover:not(:disabled) {
-      background-color: var(--color-gray-0);
-      border-color: var(--color-gray-4);
+      background-color: var(--color-surface-secondary);
+      border-color: var(--color-border-primary);
     }
 
     &:active:not(:disabled) {
-      background-color: var(--color-gray-1);
-      border-color: var(--color-gray-5);
+      background-color: var(--color-surface-tertiary);
+      border-color: var(--color-border-primary);
     }
   }
 
   &.variant-default {
-    background-color: var(--color-white);
-    color: var(--color-black);
-    border: var(--border-width-thin) solid var(--color-gray-3);
+    background-color: var(--color-surface);
+    color: var(--color-text-primary);
+    border: var(--border-width-thin) solid var(--color-border-secondary);
 
     &:hover:not(:disabled) {
-      background-color: var(--color-gray-0);
-      border-color: var(--color-gray-4);
+      background-color: var(--color-surface-secondary);
+      border-color: var(--color-border-primary);
     }
 
     &:active:not(:disabled) {
-      background-color: var(--color-gray-1);
-      border-color: var(--color-gray-5);
+      background-color: var(--color-surface-tertiary);
+      border-color: var(--color-border-primary);
     }
   }
 
