--- a/src/components/atoms/Calendar/CalendarParts/CalendarDate.module.scss
+++ b/src/components/atoms/Calendar/CalendarParts/CalendarDate.module.scss
@@ -277,3 +277,41 @@
     color: var(--color-red-6) !important;
   }
 }
+
+.dateItem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  border-radius: var(--radius-sm);
+  transition: var(--motion-transition-normal);
+  font-weight: var(--font-weight-medium);
+
+  &:hover:not(.disabled) {
+    background-color: var(--color-surface-secondary);
+    color: var(--color-text-primary);
+  }
+
+  &.selected {
+    background-color: var(--color-primary);
+    color: var(--color-surface);
+  }
+
+  &.disabled {
+    color: var(--color-text-disabled);
+    cursor: not-allowed;
+  }
+
+  &.today {
+    background-color: var(--color-surface-secondary);
+    color: var(--color-text-primary);
+    font-weight: var(--font-weight-bold);
+  }
+
+  &.highlighted {
+    background-color: var(--color-surface-secondary);
+    color: var(--color-text-primary);
+  }
+}
