--- a/src/components/atoms/Calendar/CalendarParts/CalendarTitle.module.scss
+++ b/src/components/atoms/Calendar/CalendarParts/CalendarTitle.module.scss
@@ -26,27 +26,27 @@
 
 // Type styles
 .type-titles {
-  background-color: var(--color-white);
-  color: var(--color-gray-9);
+  background-color: var(--color-surface);
+  color: var(--color-text-primary);
   border-radius: var(--radius-md);
   padding: var(--spacing-sm) var(--spacing-md);
   min-width: 120px;
   text-align: center;
 
   &:hover:not(:disabled) {
-    background-color: var(--color-gray-0);
+    background-color: var(--color-surface-secondary);
   }
 }
 
 .type-day {
-  color: var(--color-gray-6);
+  color: var(--color-text-muted);
   background-color: transparent;
   padding: var(--spacing-xs);
   text-align: center;
   min-width: 32px;
 
   &:hover:not(:disabled) {
-    color: var(--color-gray-8);
+    color: var(--color-text-primary);
   }
 }
 
