--- a/src/components/atoms/DatePicker/DatePicker.module.scss
+++ b/src/components/atoms/DatePicker/DatePicker.module.scss
@@ -46,10 +46,10 @@
 }
 
 .calendar {
-  background-color: var(--color-white);
-  border: 1px solid var(--color-border-primary);
+  background-color: var(--color-surface);
+  border: var(--border-width-thin) solid var(--color-border-primary);
   border-radius: var(--radius-lg);
-  box-shadow: 0 10px 25px var(--color-shadow);
+  box-shadow: var(--shadow-lg);
 }
 
 .calendarButton {
@@ -58,8 +58,8 @@
   justify-content: center;
   width: 40px;
   height: 40px;
-  border: 1px solid var(--color-border-primary);
-  background-color: var(--color-white);
+  border: var(--border-width-thin) solid var(--color-border-primary);
+  background-color: var(--color-surface);
   color: var(--color-text-secondary);
   cursor: pointer;
   border-radius: var(--radius-md);
@@ -75,7 +75,7 @@
   &:focus {
     outline: none;
     border-color: var(--color-border-focus);
-    box-shadow: 0 0 0 3px var(--color-border-focus-alpha);
+    box-shadow: 0 0 0 var(--border-width-normal) var(--color-border-focus);
   }
 
   &:disabled {
